<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/buttonsColor"
    android:orientation="vertical">


    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/newPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space"

        android:padding="@dimen/_20sdp"/>

    <TextView
        android:id="@+id/newPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:textColor="@color/white"
        android:text="@string/new_phone"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appname"/>
    <TextView
        android:id="@+id/oldPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:textColor="@color/white"
        android:text="@string/old_phone"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPhone"/>
    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:textColor="@color/white"
        android:text="@string/rate"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oldPhone"/>
    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:textColor="@color/white"
        android:text="@string/share"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rate"/>
    <TextView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:textColor="@color/white"
        android:text="@string/exit"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share"/>








</androidx.constraintlayout.widget.ConstraintLayout>