<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CAPPDataSelectionMainActivity">

    <RelativeLayout
        android:id="@+id/top_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/top_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/bottom_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_divider">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appcolorpurple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/old_phone"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_progress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bg"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">
            <!--  <ScrollView
                  android:id="@+id/nativeContainer"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="8dp"
                  android:layout_marginTop="24dp"
                  android:layout_marginEnd="8dp"
                  android:paddingBottom="20dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent">

                  <com.facebook.ads.NativeAdLayout
                      android:id="@+id/native_ad_container"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical" />
              </ScrollView>-->

<!--            <ProgressBar-->
<!--                android:id="@+id/progressBar4"-->
<!--                style="?android:attr/progressBarStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                 />-->

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="0dp"
                android:layout_height="@dimen/_150sdp"
                android:visibility="visible"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:translationY="@dimen/_minus30sdp"

                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_speed="2"
                app:lottie_rawRes="@raw/lineanimspeed" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/fetching_data"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bg"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <ImageView
                android:id="@+id/imagecolor"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/pieChart"
                app:layout_constraintBottom_toBottomOf="@id/pieChart"
                app:layout_constraintStart_toEndOf="@id/pieChart"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_colorsconducts"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/imagecolor"
                app:layout_constraintBottom_toBottomOf="@id/imagecolor"
                app:layout_constraintEnd_toEndOf="@id/imagecolor"
                app:layout_constraintStart_toEndOf="@id/imagecolor"
                android:orientation="vertical"

                android:translationX="@dimen/_minus15sdp"

                android:layout_marginStart="@dimen/_10sdp"
                android:weightSum="7">
                <TextView
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videos"
                    android:layout_weight="1"
                    />
                <TextView
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photos"
                    android:layout_weight="1"
                    />
                <TextView
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/docs"/>
                <TextView
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/apps"/>
                <TextView
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact"/>
                <TextView
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calender"/>
                <TextView
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/audios"/>
                <TextView
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/others"/>
            </LinearLayout>
            <com.smartswitch.phoneclone.widgets.FitChart
                android:id="@+id/pieChart"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imagecolor"
                app:layout_constraintStart_toStartOf="parent"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/_20sdp"
                android:src="@drawable/transparent_progress_back"
                app:layout_constraintStart_toStartOf="@id/pieChart"
                app:layout_constraintTop_toTopOf="@id/pieChart"
                app:layout_constraintEnd_toEndOf="@id/pieChart"
                app:layout_constraintBottom_toBottomOf="@id/pieChart"/>

            <TextView
                android:id="@+id/percentageSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="0%"
                android:textColor="@color/black"
                android:textSize="@dimen/_25sdp"
                app:layout_constraintStart_toStartOf="@id/pieChart"
                app:layout_constraintTop_toTopOf="@id/pieChart"
                app:layout_constraintEnd_toEndOf="@id/pieChart"
                app:layout_constraintBottom_toBottomOf="@id/pieChart"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:text="@string/select_data_to_send"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"

                app:layout_constraintBottom_toTopOf="@id/checkBox"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pieChart"/>
            <TextView
                android:id="@+id/text_total_data_to_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/_10sdp"

                android:layout_marginStart="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView6"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:button="@drawable/drawable_checkbox"
                android:text="@string/selectAllspaced"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_total_data_to_transfer"
                app:useMaterialThemeColors="false" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_10sdp"


                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/btn_done"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                app:spanCount="2"
                tools:listitem="@layout/row_selection_data_capp">

            </androidx.recyclerview.widget.RecyclerView>

            <!--            <ImageView-->
            <!--                android:id="@+id/btn_done"-->
            <!--                android:layout_width="50dp"-->
            <!--                android:layout_height="50dp"-->
            <!--                android:layout_marginEnd="24dp"-->
            <!--                android:layout_marginBottom="16dp"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="@+id/recyclerView"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/recyclerView"-->
            <!--                app:srcCompat="@drawable/ic_send" />-->


            <TextView
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_start_btn"
                android:gravity="center"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingRight="@dimen/_30sdp"

                android:text="@string/txt_transfer"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"

                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                 />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/bottom_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/bottom_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>