<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_warning" />

            <TextView
                android:id="@+id/tv_alertdetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="clip_vertical"
                android:justificationMode="inter_word"

                android:padding="10dp"
                android:text="@string/appalertmsg"
                android:textColor="#494949"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_marginBottom="@dimen/_20sdp"
                android:backgroundTint="@color/white"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_yes"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:shadowDy="5"
                android:layout_marginTop="@dimen/_20sdp"
                android:textStyle="bold"
                android:text="@string/install"
                android:textAllCaps="false"
                android:backgroundTint="@color/sea_green"
                android:textColor="#FFFFFF"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@id/btn_exit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_alertdetails" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>